add at least some resemblance of functionality

--- a/main.css
+++ b/main.css
@@ -4,3 +4,10 @@
     height: auto;
     min-height: 500px;
 }
+
+.testbox {
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
